# Transformer-filters

./: .gitignore  CLAUDE.md  GEMINI.md  TODO.md  analyze_exp1.py  analyze_exp2.py  analyze_exp3.py  analyze_exp4.py  pyproject.toml  start_sweep.sh  sweep_config.yaml  sweep_debug_inverse_norm.yaml  sweep_exp1_eigenvalues.yaml  sweep_exp2_matrix_structure.yaml  sweep_exp3_patching.yaml  sweep_exp4_obs_dim.yaml  sweep_obs_dim.yaml
analysis/: analyze_debug_inverse_norm.py  analyze_exp1.py  analyze_exp2.py  analyze_exp3.py  analyze_exp4.py  analyze_harmonic_dt.py  analyze_physics.py  common.py  debug_inverse_norm_results.csv  exp1_results.csv  exp2_results.csv  exp3_results.csv  exp4_results.csv
scripts/: start_euler_sweep.sh
src/: config.py  data.py  eval.py  kalman.py  main.py  model.py  train.py
src/data/: base.py  bigram.py  config.py  factory.py  lds.py  metrics.py  physics.py
src/model/: backbone.py  config.py  factory.py  heads.py  inference.py  layers.py
sweeps/: example_bigram.yaml  exp1_eigenvalues.yaml  exp2_matrix_structure.yaml  exp3_patching.yaml  exp4_obs_dim.yaml  exp_harmonic_dt.yaml  exp_input_jitter.yaml  exp_physics.yaml
