[project]
name = "transformer-filters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.7",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "optax>=0.2.6",
    "pyyaml>=6.0.3",
    "wandb>=0.24.1",
]
